pixel-wise-street-segmentation: Adjusted title

--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -5,9 +5,9 @@
 \usepackage{filecontents}
 \begin{filecontents*}{\jobname.xmpdata}
     \Keywords{recognition\sep machine learning\sep neural networks\sep symbols\sep multilayer perceptron}
-    \Title{On-line Recognition of Handwritten Mathematical Symbols}
-    \Author{Martin Thoma, Kevin Kilgour, Sebastian St{\"u}ker and Alexander Waibel}
-    \Org{Institute for Anthropomatics and Robotics}
+    \Title{Pixel-wise Segmentation of Street with Neural Networks}
+    \Author{Martin Thoma, Marvin Teichmann, Sebastian Bittel, Vitali Kaiser}
+    \Org{Forschungszentrum Informatik (FZI)}
     \Doi{}
 \end{filecontents*}
 
@@ -36,14 +36,14 @@
 \loadglsentries[main]{glossary}
 \makeglossaries
 
-\title{On-line Recognition of Handwritten Mathematical Symbols}
+\title{Pixel-wise Segmentation of Street with Neural Networks}
 \author{Martin Thoma, Marvin Teichmann, Sebastian Bittel, Vitali Kaiser}
 
 \hypersetup{
   pdfauthor   = {Martin Thoma\sep Marvin Teichmann\sep Sebastian Bittel\sep Vitali Kaiser},
   pdfkeywords = {recognition\sep machine learning\sep neural networks\sep classification\sep multilayer perceptron\sep deep learning},
   pdfsubject  = {Recognition},
-  pdftitle    = {Pixel-wise segmentation of street with Neural Networks},
+  pdftitle    = {Pixel-wise Segmentation of Street with Neural Networks},
 }
 \crefname{table}{Table}{Tables}
 \crefname{figure}{Figure}{Figures}
