ch3-datasets.tex: Added KITTI reference

--- a/ch3-datasets.tex
+++ b/ch3-datasets.tex
@@ -1,4 +1,5 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
 \section{Datasets}\label{sec:datasets}
-TODO...
+The KITTI Road Estimation dataset \cite{Fritsch2013} was used for training
+of the models and for evaluation.
