added abstract; added new sources

--- a/glossary.tex
+++ b/glossary.tex
@@ -1,27 +1,22 @@
 %!TEX root = thesis.tex
 %Term definitions
+\newacronym{AEP}{AEP}{auto-encoder pretraining}
 \newacronym{ANN}{ANN}{artificial neural network}
-\newacronym{CSR}{CSR}{cursive script recognition}
-\newacronym{DTW}{DTW}{dynamic time warping}
+\newacronym{CE}{CE}{cross entropy}
+\newacronym{CFM}{CFM}{classification figure of merit}
 \newacronym{CNN}{CNN}{Convolutional Neural Network}
-\newacronym{HMM}{HMM}{hidden Markov model}
-\newacronym{HWR}{HWR}{handwriting recognition}
+\newacronym{CUDA}{CUDA}{Compute Unified Device Architecture}
+\newacronym{GMM}{GMM}{Gaussian mixture model}
+\newacronym{GPU}{GPU}{graphics processing unit}
+\newacronym{LDA}{LDA}{linear discriminant analysis}
 \newacronym{MLP}{MLP}{multilayer perceptron}
 \newacronym{MSE}{MSE}{mean squared error}
-\newacronym{OOV}{OOV}{out of vocabulary}
-\newacronym{TDNN}{TDNN}{time delay neural network}
 \newacronym{PCA}{PCA}{principal component analysis}
-\newacronym{LDA}{LDA}{linear discriminant analysis}
-\newacronym{CROHME}{CROHME}{Competition on Recognition of Online Handwritten Mathematical Expressions}
-\newacronym{GMM}{GMM}{Gaussian mixture model}
-\newacronym{SVM}{SVM}{support vector machine}
 \newacronym{PyPI}{PyPI}{Python Package Index}
-\newacronym{CFM}{CFM}{classification figure of merit}
-\newacronym{CE}{CE}{cross entropy}
-\newacronym{GPU}{GPU}{graphics processing unit}
-\newacronym{CUDA}{CUDA}{Compute Unified Device Architecture}
 \newacronym{SLP}{SLP}{supervised layer-wise pretraining}
-\newacronym{AEP}{AEP}{auto-encoder pretraining}
+\newacronym{SST}{SST}{street segmentation toolkit}
+\newacronym{SVM}{SVM}{support vector machine}
+
 
 % Term definitions
 \newglossaryentry{epoch}{name={epoch}, description={During iterative training of a neural network, an \textit{epoch} is a single pass through the entire training set, followed by testing of the verification set.\cite{Concise12}}}
