--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -26,6 +26,7 @@ recurrent neural networks.},
   Year                     = {2010},
   Month                    = jun,
   Note                     = {Oral Presentation},
+
   Abstract                 = {Theano is a compiler for mathematical expressions in Python that combines the convenience of NumPy’s syntax with the speed of optimized native machine language. The user composes mathematical expressions in a high-level description that mimics NumPy’s syntax and semantics, while being statically typed and
 functional (as opposed to imperative). These expressions allow Theano to provide symbolic differentiation. Before performing computation, Theano optimizes the choice of expressions, translates
 them into C++ (or CUDA for GPU), compiles them into dynamically loaded Python modules, all automatically. Common machine learning algorithms implemented with Theano are from 1.6× to 7.5× faster than competitive alternatives (including those implemented with C/C++, NumPy/SciPy and MATLAB) when compiled for the
@@ -33,6 +34,18 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Location                 = {Austin, TX},
   Owner                    = {Martin Thoma},
   Timestamp                = {2015.07.23}
+}
+
+@InProceedings{Beucher1990,
+  Title                    = {Road Segmentation by Watershed Algorithms},
+  Author                   = {S. Beucher AND M. Bilodeau AND X. Yu},
+  Booktitle                = {PROMETHEUS Workshop, Sophia Antipolis, France},
+  Year                     = {1990},
+
+  Doi                      = {10.1.1.22.5731},
+  Owner                    = {Martin Thoma},
+  Timestamp                = {2015.07.23},
+  Url                      = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.22.5731}
 }
 
 @InProceedings{Fritsch2013,
@@ -53,5 +66,23 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
 
   Owner                    = {Martin Thoma},
   Timestamp                = {2015.07.23}
+}
+
+@InProceedings{Tarel2009,
+  Title                    = {Long-range road detection for off-line scene analysis},
+  Author                   = {Tarel, J.-P. and Bigorgne, E.},
+  Booktitle                = {Intelligent Vehicles Symposium, 2009 IEEE},
+  Year                     = {2009},
+  Month                    = {June},
+  Pages                    = {15-20},
+
+  Abstract                 = {Long-range detection of road surface in a sequence of images from a front camera aboard a vehicle is known as an unsolved problem. We propose an algorithm using a single camera and based on color segmentation which has interesting performance and which is stable along the sequence whatever its length. It is an off-line algorithm which makes good use of current and successive images to build reliable models of the color aspects of the road and of its environment at each vehicle position. To apply the proposed algorithm a radiometric calibration step is required to ensure uniform responses of the pixels over the image. The algorithm consists in three steps: image smoothing consistent with perspective effect on the road, building of the models of the road and non-road colors, and region growing of the road region. The relevance of the proposed algorithm is illustrated by an application to the roadway visibility estimation in stereovision and its performance are illustrated by experiments in difficult situations.},
+  Doi                      = {10.1109/IVS.2009.5164245},
+  File                     = {:home/moose/ml-paper/long-range-road-detection-for-offline-scene-analysis.pdf:PDF},
+  ISSN                     = {1931-0587},
+  Keywords                 = {estimation theory;image colour analysis;image segmentation;image sequences;object detection;roads;stereo image processing;color segmentation;image sequences;image smoothing;long-range road detection;off-line scene analysis;radiometric calibration step;roadway visibility estimation;stereovision;Asphalt;Cameras;Image analysis;Image segmentation;Intelligent vehicles;Radiometry;Road vehicles;Shape;Sun;Vehicle detection},
+  Owner                    = {Martin Thoma},
+  Timestamp                = {2015.07.23},
+  Url                      = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=5164245&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D5164245}
 }
 
