--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -53,9 +53,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
-\begin{abstract}
-Bla bla TODO
-\end{abstract}
+\input{abstract}
 
 \input{ch1-introduction}
 \input{ch2-related-work}
