ch1-introduction: Added first draft

--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -1,8 +1,10 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
 \section{Introduction}
-Blabla
-
-\cite{Thoma:2014}~describes blabla.
-
-In this paper TODO \gls{CNN} 
+Pixel-wise segmentation of street is an important part of assisted and
+autonomous driving~\cite{Tarel2009}. It can help to understand road scenes and
+reduce the space to search for lane markings. Traditionally, road segmentation
+is done with computer graphic methods such as watershed
+transformation~\cite{Beucher1990}. Recent advances in deep neural networks,
+escpecially in computer vision, suggest that \glspl{CNN} might perform better
+on road segmentation tasks then those traditional approaches.
