ch5-sst.tex: Added first draft

--- a/ch5-sst.tex
+++ b/ch5-sst.tex
@@ -1,4 +1,10 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
 \section{SST}\label{sec:SST}
-TODO
+\Gls{SST} is a Python package hosted on \gls{PyPI} and developed on GitHub. It
+makes use of Lasagne (see \cref{sec:frameworks}).
+
+It can be installed via \verb+pip install sst+. To make the installation as
+simple as possible, this does not install all requirements.
+\verb+sst selfcheck+ gives the user the possibility to check which packages
+are still required and manually install them.
