--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -54,6 +54,7 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Booktitle                = {International Conference on Intelligent Transportation Systems (ITSC)},
   Year                     = {2013},
 
+  File                     = {:home/moose/ml-paper/a-new-performance-measure-and-evaluation-benchmark-for-road-detection-algorithms.pdf:PDF},
   Owner                    = {Martin Thoma},
   Timestamp                = {2015.07.23}
 }
