--- a/glossary.tex
+++ b/glossary.tex
@@ -14,7 +14,7 @@
 \newacronym{PCA}{PCA}{principal component analysis}
 \newacronym{PyPI}{PyPI}{Python Package Index}
 \newacronym{SLP}{SLP}{supervised layer-wise pretraining}
-\newacronym{SST}{SST}{street segmentation toolkit}
+\newacronym{sst}{sst}{street segmentation toolkit}
 \newacronym{SVM}{SVM}{support vector machine}
 
 
