--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -2,4 +2,30 @@
 
 \section{Evaluation}\label{sec:evaluation}
 
-In \cref{sec:SST}... TODO
+As already stated is the KITTI Road Estimation dataset the basis for our evaluation. As the ground truth is only given for the the training data set we splitt it 20 to 80 in order to prove our performance. Besides that we hand it in to the KITTI offical evalluation.
+
+Working with neural networks we figured out that there are a lot of parameters which need to be taken care of. Firstly we evaluated different once considering run time and performance.
+
+On the one hand we have parameters not really affecting the neural network, like patch size, different image size(training testing) and on the other side
+we have filter-size number of neural layers and so on.
+So based on this we figured out the best combination on our training set and then handed it in the KITTI evaluation.
+
+In the following we will have a more precise look at the parameters and results of our neural networks.
+
+For the following evaluation we used a computer with:
+\begin{itemize}
+\item Geforce ... 4GB Ram
+\item 16 GB
+\item intel ...
+\end{itemize}
+
+Runtime
+
+
+perfomance
+
+
+kitty perforamnce
+
+
+Unfortunately the ram of the graphic card limited our possibility to use larger patch sizes.
