kitti results added

--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -56,7 +56,30 @@ perfomance
   \end{center}
 \end{table}
 
-kitty perforamnce
+\textbf{kitty performance!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
+      \begin{table}[h!]
+  \begin{center}
+\begin{tabular}{c | c | c | c | c | c | c}
+ {\bf Benchmark} & {\bf MaxF} & {\bf AP} & {\bf PRE} & {\bf REC} & {\bf FPR} & {\bf FNR}\\ \hline
+UM\_ROAD & 67.91 \% & 61.63 \% & 86.90 \% & 55.74 \% & 3.83 \% & 44.26 \%\\
+UMM\_ROAD & 79.67 \% & 78.41 \% & 93.29 \% & 69.51 \% & 5.50 \% & 30.49 \%\\
+UU\_ROAD & 56.48 \% & 51.89 \% & 84.67 \% & 42.37 \% & 2.50 \% & 57.63 \%\\
+URBAN\_ROAD & 71.10 \% & 65.14 \% & 89.83 \% & 58.84 \% & 3.67 \% & 41.16 \%\\
+\end{tabular}
+  \end{center}
+\end{table}
+
+Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives. 
+
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_um_road_000077.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_um_road_000095.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_umm_road_000025.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_umm_road_000040.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_umm_road_000066.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_uu_road_000020.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_uu_road_000027.png}
+\includegraphics[scale=0.2]{figures/kitty_eval/Persp_uu_road_000082.png}
 
 
-Unfortunately the ram of the graphic card limited our possibility to use larger patch sizes.
+
+%Unfortunately the ram of the graphic card limited our possibility to use larger patch sizes.
