--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -5,7 +5,7 @@
 In the following section we will discuss the results of our approach. First, we will compare our different approaches with each other and then finally we will compare our best approach to stanfrodpaper work (which is ranked on place 1 at KITTI road segmentation).
 As already stated, the KITTI Road Estimation dataset the basis for our evaluation.
 
-When we where conducting the first steps of our evaluation we only worked on the training data of the KITTI data set.
+When we were conducting the first steps of our evaluation we only worked on the training data of the KITTI data set.
 
 As the ground truth is only given for the training data set we split it 20 to 80(test/training)in order to be able to measure our performance. SO we compareds
 Finally we used the KITTI official evaluation side [link to webside].
