--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -87,3 +87,53 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Url                      = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=5164245&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D5164245}
 }
 
+@article{long2014fully,
+  title={Fully convolutional networks for semantic segmentation},
+  author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  journal={arXiv preprint arXiv:1411.4038},
+  year={2014}
+}
+
+@article{mohan2014deep,
+  title={Deep Deconvolutional Networks for Scene Parsing},
+  author={Mohan, Rahul},
+  journal={arXiv preprint arXiv:1411.4101},
+  year={2014}
+}
+
+@inproceedings{aly2008real,
+  title={Real time detection of lane markers in urban streets},
+  author={Aly, Mohamed},
+  booktitle={Intelligent Vehicles Symposium, 2008 IEEE},
+  pages={7--12},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1097--1105},
+  year={2012}
+}
+
+@article{SzegedyLJSRAEVR14,
+  author    = {Christian Szegedy and
+               Wei Liu and
+               Yangqing Jia and
+               Pierre Sermanet and
+               Scott Reed and
+               Dragomir Anguelov and
+               Dumitru Erhan and
+               Vincent Vanhoucke and
+               Andrew Rabinovich},
+  title     = {Going Deeper with Convolutions},
+  journal   = {CoRR},
+  volume    = {abs/1409.4842},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.4842},
+  timestamp = {Wed, 01 Oct 2014 15:00:05 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyLJSRAEVR14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
