ch2-related work update
- updates citations
- updated text
- added figure for FCNs

--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -137,3 +137,17 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyLJSRAEVR14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@ARTICLE{6182716, 
+author={Chunzhao Guo and Mita, S. and McAllester, D.}, 
+journal={Intelligent Transportation Systems, IEEE Transactions on}, 
+title={Robust Road Detection and Tracking in Challenging Scenarios Based on Markov Random Fields With Unsupervised Learning}, 
+year={2012}, 
+volume={13}, 
+number={3}, 
+pages={1338-1354}, 
+abstract={This paper presents a robust stereo-vision-based drivable road detection and tracking system that was designed to navigate an intelligent vehicle through challenging traffic scenarios and increment road safety in such scenarios with advanced driver-assistance systems (ADAS). This system is based on a formulation of stereo with homography as a maximum a posteriori (MAP) problem in a Markov random held (MRF). Under this formulation, we develop an alternating optimization algorithm that alternates between computing the binary labeling for road/nonroad classification and learning the optimal parameters from the current input stereo pair itself. Furthermore, online extrinsic camera parameter reestimation and automatic MRF parameter tuning are performed to enhance the robustness and accuracy of the proposed system. In the experiments, the system was tested on our experimental intelligent vehicles under various real challenging scenarios. The results have substantiated the effectiveness and the robustness of the proposed system with respect to various challenging road scenarios such as heterogeneous road materials/textures, heavy shadows, changing illumination and weather conditions, and dynamic vehicle movements.}, 
+keywords={Markov processes;automated highways;cameras;driver information systems;image classification;maximum likelihood estimation;object detection;object tracking;parameter estimation;road safety;road traffic;stereo image processing;unsupervised learning;ADAS;MAP problem;Markov random fields;advanced driver-assistance systems;automatic MRF parameter tuning;binary labeling;changing illumination;dynamic vehicle movements;heavy shadows;heterogeneous road materials;intelligent vehicle;maximum a posteriori problem;online extrinsic camera parameter reestimation;optimization algorithm;road safety;road textures;road tracking;road-nonroad classification;robust stereo-vision-based drivable road detection;traffic scenarios;unsupervised learning;weather conditions;Feature extraction;Intelligent vehicles;Markov random fields;Robustness;Stereo vision;Unsupervised learning;Advanced driver-assistance systems (ADASs);Markov random fields (MRFs);intelligent vehicles;road detection;stereo vision;unsupervised learning}, 
+doi={10.1109/TITS.2012.2187896}, 
+ISSN={1524-9050}, 
+month={Sept},}
